# dotbim-community

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: code_quality.yml  pypi-test-publish.yml
dotbimpy/: __init__.py  composites.py  primitives.py
notebooks/: DotbimToTrimeshScene.ipynb  Truss.ipynb  WallsWithBeams.ipynb
src/dotbimpy/: __init__.py  composites.py  primitives.py
tests/: test_color.py  test_element.py  test_file.py  test_helper.py  test_mesh.py  test_rotation.py  test_vector.py
