[project]
name = "dotbimpy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.4.3",
    "pydantic>=2.12.5",
    "pyquaternion>=0.9.9",
]

[dependency-groups]
dev = [
    "cadquery>=2.7.0",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "nbformat>=4.2.0",
    "plotly>=6.6.0",
    "pytest>=9.0.2",
    "scipy>=1.17.1",
    "trimesh>=4.11.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
