[project]
name = "dotbim-community"
version = "1.0.0"
description = "A Pydantic-based fork of the official dotbim python package."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Wojciech Radaczyński", email = "47977819+paireks@users.noreply.github.com" },
    { name = "Kaushik LS", email = "50703773+thekaushikls@users.noreply.github.com" },
]
maintainers = [
    { name = "Kaushik LS", email = "50703773+thekaushikls@users.noreply.github.com" },
]
dependencies = [
    "numpy>=2.4.3",
    "pydantic>=2.12.5",
    "pyquaternion>=0.9.9",
]

[dependency-groups]
dev = [
    "cadquery>=2.7.0",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "nbformat>=4.2.0",
    "plotly>=6.6.0",
    "pytest>=9.0.2",
    "scipy>=1.17.1",
    "trimesh>=4.11.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dotbimpy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
